@@ -66,7 +66,7 @@ option proofs : int = 1
 option quick_and_dirty : bool = false
   -- "if true then some tools will OMIT some proofs"
 option skip_proofs : bool = false
-  -- "skip over proofs"
+  -- "skip over proofs (implicit 'sorry')"
 
 
 section "Global Session Parameters"
