@@ -59,7 +59,7 @@ fun use_theories last_timing options =
     |> Unsynchronized.setmp Future.ML_statistics true
     |> no_document options ? Present.no_document
     |> Unsynchronized.setmp quick_and_dirty (Options.bool options "quick_and_dirty")
-    |> Unsynchronized.setmp Toplevel.skip_proofs (Options.bool options "skip_proofs")
+    |> Unsynchronized.setmp Goal.skip_proofs (Options.bool options "skip_proofs")
     |> Unsynchronized.setmp Printer.show_question_marks_default
         (Options.bool options "show_question_marks")
     |> Unsynchronized.setmp Name_Space.names_long_default (Options.bool options "names_long")
