@@ -26,6 +26,8 @@ dependencies.  Minor INCOMPATIBILITY.
 * Dockable window "Timing" provides an overview of relevant command
 timing information.
 
+* Option to skip over proofs, using implicit 'sorry' internally.
+
 
 *** Pure ***
 
